# alpa-phantora

./: .gitignore  README.md  build_and_test.sh  build_experiment.sh  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  run_evaluations.sh
Phantora/: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  netconfig.toml
Phantora/config/: id_ed25519  id_ed25519.pub
Phantora/include/: common.h  nccl.h
Phantora/phantora/: Cargo.toml  Makefile  build_graph.py  compute_graph.json
Phantora/phantora/compute_graphs/: compute_graph_11050360.json
Phantora/phantora/cuda_call/: Cargo.toml
Phantora/phantora/cuda_call/src/: capi.rs  lib.rs
Phantora/phantora/netsim/: Cargo.toml  Interaction.md
Phantora/phantora/netsim/src/: app.rs  architecture.rs  background_flow.rs  bandwidth.rs  cluster.rs  config.rs  lib.rs  simulator.rs  timer.rs
Phantora/phantora/netsim/tests/: allreduce_example.toml  alltoall.rs  toy1.rs
Phantora/phantora/phantora/: Cargo.toml  build.rs
Phantora/phantora/phantora/src/: args.rs  cuda_bindings.rs  cuda_estimate.rs  event_queue.rs  float.rs  lib.rs  main.rs  nccl_ops.rs  simulator.rs  timeline.rs  torch_call.rs  torch_estimate.rs
Phantora/phantora/phantora/src/alpa/: graph.rs  inter.rs  intra.rs  mesh.rs  mod.rs
Phantora/phantora/visualizer/: Cargo.toml
Phantora/phantora/visualizer/src/: main.rs
Phantora/stub/: cublas.c  cublas_noimpl.c  cuda.c  cudart.c  cudart_noimpl.c  cudnn.c  nccl.c  nvml.c
Phantora/tests/: phantora_utils.py  test_deepspeed.py  test_megatron.py  test_torchtitan.py  test_torchtitan_llama3_8b.toml
Phantora/tests/docker/deepspeed/: .gitignore  config_gen.py  run.sh  stop.sh
Phantora/tests/docker/megatron/: .gitignore  config_gen.py  run.sh
Phantora/tests/docker/torchtitan/: .gitignore  config_gen.py  run.sh  stop.sh
