[package]
name = "cuda_call"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
bincode = "1.3.3"
cpp_demangle = "0.4.3"
ctor = "0.5.0"
hostname = "0.4.0"
libc = "0.2.155"
serde = { version = "1.0.196", features = ["derive"] }
serde-big-array = "0.5.1"
strum = { version = "0.26.2", features = ["derive"] }
