[package]
name = "netsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
fnv = "1.0.7"
indexmap = "2.2.6"
lazy_static = "1.4.0"
log = "0.4.21"
petgraph = { version = "0.6.4", features = ["serde", "serde_derive", "serde-1"] }
priority-queue = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
smallvec = "1.13.2"
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
strum_macros = "0.26.2"
thiserror = "1.0.58"
toml = { version = "0.8.12", features = ["preserve_order"] }
